--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -5,6 +5,9 @@
   flex-direction: column;
   border-bottom: 1px solid $muted-graphic;
   padding: 0.5em;
+  align-items: stretch;
+  max-width: 100%;
+  overflow: auto;
 
   .comment--content {
     margin-bottom: 0;
